# malloc

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  SPEC.md
include/: malloc_atomic.h  malloc_config.h  malloc_types.h
src/: arena.c  debug.c  init.c  large.c  malloc.c  os.c  page.c  segment.c  size_class.c  slab.c  tld.c  zone.c
tests/: bench_memory.c  bench_throughput.c  test_alignment.c  test_basic.c  test_debug.c  test_interpose.sh  test_large.c  test_realloc.c  test_threads.c
